# trading-floor

./: .env.dist  .env.example  .eslintignore  .eslintrc.cjs  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintignore  CONTRIBUTING.md  Dockerfile  README.md  bot.py  client_secret.json  components.d.ts  docker-compose.yaml  docker-entrypoint.sh  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  stylelint.config.js  tsconfig.cypress-ct.json  tsconfig.json  vite.config.ts
.github/workflows/: lint.yml  test.yml
cypress/e2e/: example.cy.ts
src/: App.vue  config.py  conftest.py  factories.py  main.ts
src/api/: urls.py
src/api/AxiosService/: axiosService.ts
src/api/KY/: commonTypes.ts
src/api/KY/AdvertisementService/: advertisement.api.ts  advertisement.types.ts
src/api/auth/: auth.api.ts  auth.types.ts
src/api/common/: urls.py
src/api/meta/: metaAxios.ts  metaAxios.types.ts
src/api/token/: token.api.ts  token.types.ts
src/api/user/: user.api.ts  user.types.ts
src/api/v1/: urls.py
src/apps/advertisement/: admin.py  models.py
src/apps/deal/: admin.py  models.py
src/apps/feedback/: admin.py  models.py
src/apps/user/: models.py  permissions.py  serializer.py  urls.py  views.py
src/components/: LoginForm.vue  RegistrationForm.vue
src/components/Forms/: CreateAdvertisementForm.vue  GoogleRegistrationForm.vue  LoginForm.vue  LoginFormPage.vue  RegistrationForm.vue  RegistrationFormPage.vue
src/components/common/: IconTemplate.vue
src/components/widgets/: AdvertisementList.vue  CategoriesSidebar.vue  FiltersSidebar.vue  GoogleAuth.vue  TheFooter.vue  TheHeader.vue  UserCard.vue
src/composables/: useApi.ts  useTokens.ts
src/config/: settings.py  urls.py
src/constants/: formRules.ts  messages.ts  routeNames.ts  storageNames.ts
src/handlers/common/: menus.py
src/handlers/user/: handlers.py  router.py  start.py
src/layouts/: AuthLayout.vue  AuthorizationLayout.vue  DefaultLayout.vue
src/misc/: states.py
src/models/: advertisement.py  category.py  media.py  user.py
src/pages/: AuthPage.vue  HomePage.vue  LoginPage.vue  ProfilePage.vue  RegistrationPage.vue
src/presets/: messages.ts
src/router/: index.ts
src/services/: base.py
src/services/api/: base.py
src/stores/: authStore.ts
src/styles/: _fonts.scss  base.scss  common.scss  index.scss  reset.scss
src/styles/resources/: index.scss
src/types/: advertisementTypes.ts  auth.ts  authFormTypes.ts  formTypes.ts  userTypes.ts
src/utils/: colors.py  formatting.py  strings.py  validatiors.py
src/utils/mixins/: views.py
src/utils/tests/: tests_strings.py
src/validators/: auth.ts  common.ts
(+86 files in other folders)
