[tool.poetry]
name = "trading-floor"
version = "0.1.0"
description = "Trading floor for the dormitory"
authors = ["s1veme <kpdpav@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
djangorestframework = "^3.14.0"
environs = "^9.5.0"
psycopg2 = "^2.9.5"
django-cors-headers = "^3.13.0"
django-minio-storage = "^0.3.10"
django-multiselectfield = "^0.1.12"
pillow = "^9.4.0"
djangorestframework-simplejwt = "^5.2.2"
django-imagekit = "^4.1.0"
pytest-django = "^4.5.2"
pytest = "^7.2.2"
drf-spectacular = "^0.26.0"
google-auth = "^2.16.3"
google-auth-oauthlib = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}
flake8 = "^6.0.0"
pre-commit = "^3.1.0"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py39", "py310"]
include = ".py$"
force-exclude = """
migrations
| .venv
| venv
"""


[tool.isort]
profile="black"
line_length=120
extend_skip_glob = [
  "migrations/*",
  ".venv/*",
  "venv/*"
]
